@@ -40,14 +40,15 @@ WriteMakefile(
 		'autodie' => 0,
 		'strict' => 0,
 		'warnings' => 0,
+		'Carp' => 0,
 		'Data::Dumper' => 0,
+		# 'Error' => 0,
 		'DBD::SQLite::Constants' => 0,
 		'File::Basename' => 0,
 		'File::Spec' => 0,
 		'File::pfopen' => 0.03,
 		'File::Temp' => 0,
-		# 'Error' => 0,
-		'Carp' => 0
+		'Scalar::Util' => 0
 	}, dist => $dist,
 	clean		=> { FILES => 'Database-Abstraction-*' },
 	# META_ADD => {
